--- a/src/components/Client/Hero/HeroImage.module.css
+++ b/src/components/Client/Hero/HeroImage.module.css
@@ -46,9 +46,12 @@ body {
     left: -50vw;
     z-index: 2;
     backdrop-filter: blur(20px) saturate(180%);
+    background-color: rgba(0, 0, 0, 0);
     transform: translate(-100%) translate(100%);
     transition: all 1s ease; /* Animation transition */
 }
+
+
 .navbar_close {
     position: absolute;
     top: 50%;
@@ -105,8 +108,6 @@ body {
     flex-direction: column;
     z-index: 10;
     transition: left 0.3s ease; /* Animation transition */
-
-
 }
 
 .layer-3-rain {
@@ -123,7 +124,7 @@ body {
     transition: all .6s ease;
 }
 
-.main_content h1 {
+.main_content {
     letter-spacing: calc(var(--ratio) * -0.05) !important;
     line-height: 1.35em !important;
     text-align: center;
@@ -136,6 +137,65 @@ body {
     -moz-animation:text 3s ease-out;
     animation:text 3s ease-in;
     animation-delay: 7s;
+    filter: saturate(100%);
+}
+
+@media (max-width: 1000px) {
+    .layer_background {
+        transform: translateX(10%);
+    }
+    .navbar {
+        width: 60vw !important;
+        left: -60vw !important;
+    }
+    .main_content  {
+        font-size: 32px;
+    }
+    .description {
+        font-size: 18px !important;
+        margin-top: 30px !important;
+    }
+}
+
+@media (max-width: 500px) {
+    .main_content  {
+        font-size: 28px;
+
+        transform: translateX(120%);
+    }
+    .description {
+
+        transform: translateX(70%);
+
+    }
+}
+
+.visible {
+    -webkit-animation: backgroundHidden .7s ease-out;
+    -moz-animation: backgroundHidden .7s ease-out;
+    animation-delay: 0s;
+    animation: backgroundVisible .7s ease-out;
+    opacity: 1;
+    filter: saturate(180%);
+}
+
+.hidden {
+    -webkit-animation:backgroundHidden .7s ease-out;
+    -moz-animation:backgroundHidden .7s ease-out;
+    animation: backgroundHidden .7s ease-out;
+    opacity: 0;
+    animation-delay: 0s;
+    filter: saturate(180%);
+
+}
+
+.firstAppearing {
+    -webkit-animation: backgroundHidden 3s ease-out;
+    -moz-animation: backgroundHidden 3s ease-out;
+    animation: backgroundVisible 3s ease-out;
+    opacity: 1;
+    animation-delay: 7s;
+
 }
 
 @keyframes titleText {
@@ -167,6 +227,33 @@ body {
     }
 }
 
+@keyframes backgroundVisible {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes backgroundHidden {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+
+
+
 .description {
     position: absolute;
     top: 50%;
@@ -179,9 +266,9 @@ body {
     -moz-animation:carousel 13s linear;
     animation:carousel 13s linear;
     transition: all .6s ease;
-
-
 }
+
+
 
 .button {
     -webkit-animation:carousel 14s linear;
@@ -195,7 +282,6 @@ body {
     transition: all 0.3s ease;
 
 
-
     padding: 10px 20px;
     background: white;
     border-radius: 20px;
@@ -203,6 +289,8 @@ body {
     font-size: 18px;
     font-family: Futura, sans-serif;
     text-decoration: unset;
+    border: 1px solid transparent;
+
 
 }
 
