--- a/src/components/Client/Hero/HeroImage.module.css
+++ b/src/components/Client/Hero/HeroImage.module.css
@@ -51,6 +51,11 @@ body {
     transition: all 1s ease; /* Animation transition */
 }
 
+.fullscreenNav {
+    width: 100vw !important;
+    left: -100vw !important;
+}
+
 
 .navbar_close {
     position: absolute;
@@ -144,16 +149,17 @@ body {
     .layer_background {
         transform: translateX(10%);
     }
-    .navbar {
-        width: 60vw !important;
-        left: -60vw !important;
-    }
     .main_content  {
         font-size: 32px;
     }
     .description {
         font-size: 18px !important;
         margin-top: 30px !important;
+    }
+
+    .button {
+        padding: 4px 10px !important;
+        font-size: 12px !important;
     }
 }
 
