Fix nav width | Add local fonts

--- a/src/components/Client/Hero/HeroImage.module.css
+++ b/src/components/Client/Hero/HeroImage.module.css
@@ -149,6 +149,10 @@ body {
     .layer_background {
         transform: translateX(10%);
     }
+    .navbar {
+        width: 60vw !important;
+        left: -60vw !important;
+    }
     .main_content  {
         font-size: 32px;
     }
