--- a/src/components/Client/Home.module.css
+++ b/src/components/Client/Home.module.css
@@ -24,6 +24,12 @@
     font-family: "Apple Chancery", sans-serif;
 }
 
+@media (max-width: 500px) {
+    .title {
+        font-size: 32px;
+    }
+}
+
 .video {
     width: 100%; /* Could also use width: 100%; */
     height: 100%;
