--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,16 @@ body, html {
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/fonts/Roboto-Regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/fonts/FUTURA55REGULAR.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 
