Add woff2 fonts

--- a/src/index.css
+++ b/src/index.css
@@ -15,26 +15,33 @@ body, html {
 
 @font-face {
   font-family: 'Roboto';
-  src: url('/public/fonts/Roboto-Regular.woff') format('woff');
+  src: url('/public/fonts/Roboto-Regular.woff?v=1.0') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto';
-  src: url('/public/fonts/FUTURA55REGULAR.woff') format('woff');
+  src: url('/public/fonts/FUTURA55REGULAR.woff?v=1.0') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 @font-face {
   font-family: 'Roboto';
-  src: url('/public/fonts/Roboto-Regular.woff2') format('woff2');
+  src: url('/public/fonts/Roboto-Regular.woff2?v=1.0') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 @font-face {
   font-family: 'Roboto';
-  src: url('/public/fonts/FUTURA55REGULAR.woff2') format('woff2');
+  src: url('/public/fonts/FUTURA55REGULAR.woff2?v=1.0') format('woff2');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+
 }
 
