--- a/src/components/Admin/ui/Navbar/Navbar.module.css
+++ b/src/components/Admin/ui/Navbar/Navbar.module.css
@@ -1,4 +1,5 @@
 .navbar {
+    font-family: Arial, sans-serif;
     position: fixed;
     top:0;
     left:0;
@@ -11,7 +12,6 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    font-family: Roboto, sans-serif;
 }
 
 .title {
