--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body, html {
   font-display: swap;
 }
 @font-face {
-  font-family: 'Futura';
+  font-family: 'Roboto';
   src: url('/public/fonts/FUTURA55REGULAR.woff?v=1.0') format('woff');
   font-weight: normal;
   font-style: normal;
@@ -38,7 +38,7 @@ body, html {
 
 }
 @font-face {
-  font-family: 'Futura';
+  font-family: 'Roboto';
   src: url('/public/fonts/FUTURA55REGULAR.woff2?v=1.0') format('woff2');
   font-weight: normal;
   font-style: normal;
