--- a/src/components/Client/Hero/HeroImage.module.css
+++ b/src/components/Client/Hero/HeroImage.module.css
@@ -11,6 +11,21 @@
     --logo-size: calc(var(--ratio) * 7.8);
 }
 
+@font-face {
+    font-family: 'Futura, sans-serif';
+    src: url('/public/fonts/FUTURA55REGULAR.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: 'Futura, sans-serif';
+    src: url('/public/fonts/FUTURA55REGULAR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     font-family: Arial, sans-serif;
     transition: all 0.3s ease;
