--- a/src/components/Client/Hero/HeroImage.module.css
+++ b/src/components/Client/Hero/HeroImage.module.css
@@ -12,14 +12,14 @@
 }
 
 @font-face {
-    font-family: Futura, sans-serif;
+    font-family: Futura;
     src: url('/public/fonts/FUTURA55REGULAR.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 @font-face {
-    font-family: Futura, sans-serif;
+    font-family: Futura;
     src: url('/public/fonts/FUTURA55REGULAR.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
