--- a/src/components/Client/Hero/HeroImage.module.css
+++ b/src/components/Client/Hero/HeroImage.module.css
@@ -26,6 +26,22 @@
     font-display: swap;
 }
 
+@font-face {
+    font-family: Roboto;
+    src: url('/public/fonts/Roboto-Regular.woff?v=1.0') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url('/public/fonts/Roboto-Regular.woff2?v=1.0') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     font-family: Arial, sans-serif;
     transition: all 0.3s ease;
