--- a/src/components/Client/HeroNavigation/HeroNavigation.module.css
+++ b/src/components/Client/HeroNavigation/HeroNavigation.module.css
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: Futura;
+    src: url('/public/fonts/FUTURA55REGULAR.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+@font-face {
+    font-family: Futura;
+    src: url('/public/fonts/FUTURA55REGULAR.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url('/public/fonts/Roboto-Regular.woff?v=1.0') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url('/public/fonts/Roboto-Regular.woff2?v=1.0') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .navigation {
     height: 100%;
     display: inline-flex;
