FONTS FIXED FINALLY

--- a/src/components/Admin/ui/Navbar/Navbar.module.css
+++ b/src/components/Admin/ui/Navbar/Navbar.module.css
@@ -17,7 +17,7 @@
 .title {
     padding-left: 10px;
     padding-bottom: 20px;
-    font-family: Roboto, sans-serif;
+    font-family: FuturaRegular, sans-serif;
 
 }
 
