--- a/src/components/Client/HeroNavigation/HeroNavigation.module.css
+++ b/src/components/Client/HeroNavigation/HeroNavigation.module.css
@@ -105,42 +105,22 @@
         animation: unset !important;
     }
 
-    .animals__image_content {
-        padding-top: 10px !important;
-        padding-bottom: 10px !important;
-        font-size: 12px !important;
-        opacity: 1 !important;
-        width: 100% !important;
-        height: 100% !important;
-        animation: unset !important;
-    }
-
-    .animals__image_content_hidden {
-        padding-top: 10px !important;
-        padding-bottom: 10px !important;
-        font-size: 12px !important;
-        opacity: 1 !important;
-        width: 100% !important;
-        height: 100% !important;
-        animation: unset !important;
-    }
 
     .title {
-        font-size: 28px !important;
+        font-size: 36px !important;
     }
 
     .info__item {
-        font-size: 12px;
+        font-size: 16px;
     }
 
     .button {
         padding: 4px 10px !important;
-        font-size: 12px !important;
+        font-size: 14px !important;
     }
 
     .reviewInput {
         font-size: 14px !important;
-        padding: 4px 5px 4px 7px !important;
     }
 }
 
@@ -217,6 +197,14 @@
         width: 100vw;
     }
 
+    .reviewInput {
+        width: 65% !important;
+        border: 1px solid rgba(255, 255, 255, 0.2) !important;
+        background-color: rgba(255, 255, 255, 0.2) !important;
+        padding: 6px 8px 6px 13px !important;
+
+    }
+
 ;
 }
 
@@ -272,9 +260,9 @@
 
 .reviewInput {
     min-width: 150px;
-    width: 100% !important;
+    width: 100%;
     color: white;
-    max-width: 40%;
+    max-width: 500px;
     padding: 8px 10px 8px 15px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 20px;
@@ -329,10 +317,10 @@ textarea {
 
 @media (max-width: 500px) {
     .animals__content {
-        padding: 52px 15px 15px;
+        padding: 52px 30px 50px;
     }
     .info__content {
-        padding: 52px 15px 15px;
+        padding: 52px 30px 50px;
     }
 }
 
@@ -357,7 +345,7 @@ textarea {
 .animals__image_content {
     padding-top: 10px;
     padding-bottom: 10px;
-    font-size: 16px;
+    font-size: 14px;
     opacity: 1;
     width: 100%;
     height: 100%;
@@ -386,7 +374,7 @@ textarea {
 .animals__image_content_hidden {
     padding-top: 0px;
     padding-bottom: 0px;
-    font-size: 16px;
+    font-size: 14px;
     opacity: 0;
     height: 0;
     transition: all .3s ease;
